change to softmax

--- a/baselines/cnn_lstm_baseline.ipynb
+++ b/baselines/cnn_lstm_baseline.ipynb
@@ -449,6 +449,7 @@
         "    self.combined_fc1 = nn.Linear(640*2, 256)\n",
         "    self.combined_fc2 = nn.Linear(256, 128)\n",
         "    self.output_fc = nn.Linear(128, n_out)\n",
+        "    self.softmax = nn.Softmax()\n",
         "\n",
         "  def lstm_encoder(self, lstm_inp):\n",
         "    batch_size = lstm_inp.size(0)\n",
@@ -480,7 +481,8 @@
         "    combined_inp = torch.cat((cnn_out1, cnn_out2, lstm_out1, lstm_out2), 1)\n",
         "    x_comb = F.relu(self.combined_fc1(combined_inp))\n",
         "    x_comb = F.relu(self.combined_fc2(x_comb))\n",
-        "    out = torch.sigmoid(self.output_fc(x_comb))\n",
+        "    # out = torch.sigmoid(self.output_fc(x_comb))\n",
+        "    out = self.softmax(self.output_fc(x_comb))\n",
         "    return out\n",
         "\n",
         "  def init_hidden(self, batch_size):\n",
@@ -489,7 +491,7 @@
         "                      weight.new(self.n_layers, batch_size, self.n_hidden).zero_().to(device))\n",
         "    return hidden"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -499,7 +501,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4f2ae723-db40-4879-b912-6f418ed996da"
+        "outputId": "d7bb45ee-4835-4a44-96d4-dafc6108407a"
       },
       "source": [
         "print(\"Currently using device: {}\\n\".format(DEVICE))\n",
@@ -560,7 +562,7 @@
         "  model.train()\n",
         "  torch.cuda.empty_cache()"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,19 +588,20 @@
             "  (combined_fc1): Linear(in_features=1280, out_features=256, bias=True)\n",
             "  (combined_fc2): Linear(in_features=256, out_features=128, bias=True)\n",
             "  (output_fc): Linear(in_features=128, out_features=2, bias=True)\n",
+            "  (softmax): Softmax(dim=None)\n",
             ")\n",
             "\n",
             "Training Started...\n",
-            "Epoch 1: train_loss: 0.6942 train_acc: 0.4997 | val_loss: 0.6933 val_acc: 0.5001\n",
-            "Epoch 2: train_loss: 0.6937 train_acc: 0.4999 | val_loss: 0.6932 val_acc: 0.5001\n",
-            "Epoch 3: train_loss: 0.6934 train_acc: 0.5000 | val_loss: 0.6930 val_acc: 0.5001\n",
-            "Epoch 4: train_loss: 0.6925 train_acc: 0.5004 | val_loss: 0.6925 val_acc: 0.5004\n",
-            "Epoch 5: train_loss: 0.6873 train_acc: 0.5033 | val_loss: 0.6915 val_acc: 0.5024\n",
-            "Epoch 6: train_loss: 0.6762 train_acc: 0.5137 | val_loss: 0.6933 val_acc: 0.5086\n",
-            "Epoch 7: train_loss: 0.6599 train_acc: 0.5304 | val_loss: 0.7107 val_acc: 0.5150\n",
-            "Epoch 8: train_loss: 0.6418 train_acc: 0.5427 | val_loss: 0.7050 val_acc: 0.5242\n",
-            "Epoch 9: train_loss: 0.6336 train_acc: 0.5507 | val_loss: 0.6994 val_acc: 0.5265\n",
-            "Epoch 10: train_loss: 0.6182 train_acc: 0.5720 | val_loss: 0.6672 val_acc: 0.5412\n"
+            "Epoch 1: train_loss: 0.6941 train_acc: 0.4995 | val_loss: 0.6931 val_acc: 0.5000\n",
+            "Epoch 2: train_loss: 0.6933 train_acc: 0.4999 | val_loss: 0.6932 val_acc: 0.5000\n",
+            "Epoch 3: train_loss: 0.6931 train_acc: 0.5000 | val_loss: 0.6931 val_acc: 0.5000\n",
+            "Epoch 4: train_loss: 0.6916 train_acc: 0.5008 | val_loss: 0.6920 val_acc: 0.5008\n",
+            "Epoch 5: train_loss: 0.6846 train_acc: 0.5053 | val_loss: 0.6903 val_acc: 0.5040\n",
+            "Epoch 6: train_loss: 0.6715 train_acc: 0.5172 | val_loss: 0.6974 val_acc: 0.5108\n",
+            "Epoch 7: train_loss: 0.6506 train_acc: 0.5368 | val_loss: 0.6955 val_acc: 0.5169\n",
+            "Epoch 8: train_loss: 0.6292 train_acc: 0.5577 | val_loss: 0.6967 val_acc: 0.5268\n",
+            "Epoch 9: train_loss: 0.6132 train_acc: 0.5780 | val_loss: 0.7088 val_acc: 0.5283\n",
+            "Epoch 10: train_loss: 0.5928 train_acc: 0.5869 | val_loss: 0.6933 val_acc: 0.5547\n"
           ]
         }
       ]
@@ -624,7 +627,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c6f1b84a-6676-45a4-9669-18c4ad891239"
+        "outputId": "8d34e073-d484-4a52-eb64-0b9f716ddd01"
       },
       "source": [
         "def single_pair_inference(premise_image_path, hypothesis_image_path, premise_text, hypothesis_text, model, tokenizer):\n",
@@ -649,7 +652,7 @@
         "    cnn_inp1, cnn_inp2 = cnn_inp1.to(DEVICE), cnn_inp2.to(DEVICE)\n",
         "    model.zero_grad()\n",
         "    output = model(lstm_inp1, lstm_inp2, cnn_inp1, cnn_inp2)\n",
-        "    print(output.squeeze())\n",
+        "  return output.squeeze().cpu().detach().numpy().tolist()\n",
         "  \n",
         "\n",
         "\n",
@@ -664,14 +667,17 @@
         "          model=model,\n",
         "          tokenizer=tokenizer)\n"
       ],
-      "execution_count": 28,
+      "execution_count": 45,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tensor([0.5772, 0.4274], device='cuda:0', grad_fn=<SqueezeBackward0>)\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.7792053818702698, 0.22079461812973022]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
         }
       ]
     },
