Incorporate Haocheng's evaluator code

--- a/baselines/CLIP_evaluation.ipynb
+++ b/baselines/CLIP_evaluation.ipynb
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 123,
    "id": "29981c99-e216-4f07-a0ea-cbf962ed9315",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 114,
    "id": "43a41485-1311-4cca-8315-7aa40fbd3eaf",
    "metadata": {},
    "outputs": [],
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 115,
    "id": "c514d836-2840-456b-a8c6-3f045e188d16",
    "metadata": {},
    "outputs": [
@@ -882,16 +882,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 62/62 [00:00<00:00, 170.01it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 62/62 [00:00<00:00, 169.16it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "torch.Size([3100, 77])"
+       "torch.Size([310, 77])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 116,
    "id": "67aaf16f-a89c-4a82-9cef-b568ab08c1bb",
    "metadata": {},
    "outputs": [
@@ -920,7 +920,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "97 97\n"
+      "10 10\n"
      ]
     }
    ],
@@ -960,8 +960,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "130811f3-c839-4bad-b715-b92627ad8287",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "class Evaluator:\n",
+    "    def __init__(self, GroundTruth):\n",
+    "      self.GroundTruth = GroundTruth\n",
+    "\n",
+    "    def NDCG_Eval(self, rankresult, topk):\n",
+    "      sortedRankResult = sorted(rankresult.items(), key = lambda x:x[1], reverse=True)\n",
+    "      DCGScore = 0\n",
+    "      result = []\n",
+    "      for i, item in enumerate(sortedRankResult[:topk]):\n",
+    "        if item[0] in self.GroundTruth:\n",
+    "          result.append((item, i))\n",
+    "      DCGScore = sum([item[0][1]/math.log(item[1]+2, 2) for item in result])\n",
+    "      IDCGScore = sum([1/math.log(i+2,2) for i in range(topk)])\n",
+    "      NDCG = DCGScore / IDCGScore\n",
+    "\n",
+    "      return NDCG\n",
+    "    \n",
+    "    def Score_Eval(self, rankresult, topk):\n",
+    "      sortedRankResult = sorted(rankresult.items(), key = lambda x:x[1], reverse=True)\n",
+    "      return sum(i[1] for i in sortedRankResult[:topk] if i[0] in self.GroundTruth) / topk\n",
+    "    \n",
+    "    def Precision(self, rankresult, topk):\n",
+    "      sortedRankResult = sorted(rankresult.items(), key = lambda x:x[1], reverse=True)\n",
+    "      topkresult = sortedRankResult[:topk]\n",
+    "      return len([i for i in sortedRankResult[:topk] if i[0] in self.GroundTruth]) / len(topkresult)\n",
+    "\n",
+    "    def Recall(self, rankresult, topk):\n",
+    "      sortedRankResult = sorted(rankresult.items(), key = lambda x:x[1], reverse=True)\n",
+    "      topkresult = sortedRankResult[:topk]\n",
+    "      return len([i for i in sortedRankResult[:topk] if i[0] in self.GroundTruth]) / len(self.GroundTruth)\n",
+    "    \n",
+    "    def FValue(self, rankresult, topk):\n",
+    "      precision = self.Precision(rankresult, topk)\n",
+    "      recall = self.Recall(rankresult, topk)\n",
+    "      return 2 * precision * recall / (precision + recall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "752e0478-0a4b-4cde-8c8c-2785152f1786",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NDCG: 0.802 (95% CI -0.382-1.987)\n",
+      "Score: 0.467 (95% CI -0.167-1.102)\n",
+      "Precision: 0.160 (95% CI 0.003-0.317)\n",
+      "Recall: 0.059 (95% CI -0.005-0.123)\n",
+      "FValue: 0.079 (95% CI 0.013-0.144)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now use the evaluator\n",
+    "TOP_K = 10\n",
+    "\n",
+    "ndcg = np.zeros(len(premise_products))\n",
+    "score = np.zeros(len(premise_products))\n",
+    "precision = np.zeros(len(premise_products))\n",
+    "recall = np.zeros(len(premise_products))\n",
+    "fvalue = np.zeros(len(premise_products))\n",
+    "for i, (ground_truth, rankings) in enumerate(zip(ground_truth_lists, ranking_results)):\n",
+    "    evaluator = Evaluator(ground_truth)\n",
+    "    rankings = {product: output for product, output in zip(hypothesis_products, rankings)}\n",
+    "    ndcg[i] = evaluator.NDCG_Eval(rankings, TOP_K)\n",
+    "    score[i] = evaluator.Score_Eval(rankings, TOP_K)\n",
+    "    precision[i] = evaluator.Precision(rankings, TOP_K)\n",
+    "    recall[i] = evaluator.Recall(rankings, TOP_K)\n",
+    "    fvalue[i] = evaluator.FValue(rankings, TOP_K)\n",
+    "print(\"NDCG: {:.3f} (95% CI {:.3f}-{:.3f})\".format(ndcg.mean(), ndcg.mean() - 1.96 * ndcg.std(), ndcg.mean() + 1.96 * ndcg.std()))\n",
+    "print(\"Score: {:.3f} (95% CI {:.3f}-{:.3f})\".format(score.mean(), score.mean() - 1.96 * score.std(), score.mean() + 1.96 * score.std()))\n",
+    "print(\"Precision: {:.3f} (95% CI {:.3f}-{:.3f})\".format(precision.mean(), precision.mean() - 1.96 * precision.std(), precision.mean() + 1.96 * precision.std()))\n",
+    "print(\"Recall: {:.3f} (95% CI {:.3f}-{:.3f})\".format(recall.mean(), recall.mean() - 1.96 * recall.std(), recall.mean() + 1.96 * recall.std()))\n",
+    "print(\"FValue: {:.3f} (95% CI {:.3f}-{:.3f})\".format(fvalue.mean(), fvalue.mean() - 1.96 * fvalue.std(), fvalue.mean() + 1.96 * fvalue.std()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ad87869-e50a-41da-8bcb-005b461358ce",
    "metadata": {},
    "outputs": [],
    "source": []
