Add serialization to eval metrics

--- a/baselines/CLIP_untuned_evaluation.ipynb
+++ b/baselines/CLIP_untuned_evaluation.ipynb
@@ -230,77 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "vvJNMnx-9pVe",
-   "metadata": {
-    "id": "vvJNMnx-9pVe"
-   },
-   "outputs": [],
-   "source": [
-    "class CLIPIKEA(nn.Module):\n",
-    "    def __init__(self, clip_model, embedding_dim, n_out):\n",
-    "        super(CLIPIKEA, self).__init__()\n",
-    "\n",
-    "        self.clip_model = clip_model\n",
-    "        # self.combined_fc1 = nn.Linear(embedding_dim * 2, 16)\n",
-    "        # self.batch_norm = nn.BatchNorm1d(num_features=32)\n",
-    "        # self.dropout = nn.Dropout(0.5)\n",
-    "        self.output_fc = nn.Linear(embedding_dim * 4, n_out)\n",
-    "\n",
-    "    def forward(self, txt_1, txt_2, img_1, img_2):\n",
-    "        with autocast(enabled=False):\n",
-    "            txt_emb_1 = self.clip_model.encode_text(txt_1)\n",
-    "            txt_emb_2 = self.clip_model.encode_text(txt_2)\n",
-    "            img_emb_1 = self.clip_model.encode_image(img_1)\n",
-    "            img_emb_2 = self.clip_model.encode_image(img_2)\n",
-    "\n",
-    "        # emb_1 = self.batch_norm(self.combined_fc1(torch.cat((txt_emb_1, img_emb_1), 1)))\n",
-    "        # emb_2 = self.batch_norm(self.combined_fc1(torch.cat((txt_emb_2, img_emb_2), 1)))\n",
-    "        # emb_1 = self.dropout(F.gelu(emb_1))\n",
-    "        # emb_2 = self.dropout(F.gelu(emb_2))\n",
-    "        # emb_1 = F.gelu(self.combined_fc1(torch.cat((txt_emb_1, img_emb_1), 1)))\n",
-    "        # emb_2 = F.gelu(self.combined_fc1(torch.cat((txt_emb_2, img_emb_2), 1)))\n",
-    "        # out = self.output_fc(torch.cat((emb_1, emb_2), 1))\n",
-    "        out = self.output_fc(torch.cat((txt_emb_1, img_emb_1, txt_emb_2, img_emb_2), 1))\n",
-    "\n",
-    "        return out\n",
-    "\n",
-    "    def head_parameters(self):\n",
-    "      return itertools.chain(#self.combined_fc1.parameters(),\n",
-    "                             #self.batch_norm.parameters(),\n",
-    "                             #self.dropout.parameters(),\n",
-    "                             self.output_fc.parameters())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "45R7g0x8NihA",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "cuda\n"
-     ]
-    }
-   ],
-   "source": [
-    "output_size = 1 # only output a single sigmoid value # y.shape[1]\n",
-    "print(output_size)\n",
-    "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "print(device)\n",
-    "\n",
-    "full_model = CLIPIKEA(model, 512, output_size)\n",
-    "full_model.to(device);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "db58fd4c-56d1-44dd-b949-31be626225ef",
    "metadata": {},
    "outputs": [],
@@ -323,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7DW6oxGPmC9-",
    "metadata": {
     "id": "7DW6oxGPmC9-"
@@ -339,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "qmCx_kVEmF-s",
    "metadata": {
     "id": "qmCx_kVEmF-s"
@@ -359,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "abwrNXYP8ibS",
    "metadata": {
     "colab": {
@@ -452,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "XOcblifyo3ri",
    "metadata": {
     "id": "XOcblifyo3ri"
@@ -479,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "jtQJWkJ0fEPT",
    "metadata": {
     "id": "jtQJWkJ0fEPT"
@@ -582,265 +512,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b7cc0a9-da72-4010-8a34-599a102c397d",
-   "metadata": {},
-   "source": [
-    "# Embedding Comparison\n",
-    "\n",
-    "Let's get embeddings by CLIP at each training epoch and see how they change."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "d26c44c0-5cea-4f7f-9ae0-4d253c8493f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CHECKPOINT_DIR = \"clip_checkpoints/\"\n",
-    "checkpoint_paths = [CHECKPOINT_DIR + fname for fname in [\n",
-    "    \"aws_text_embedding_one_layer_dual_lr_initial_state.p\",\n",
-    "    \"aws_text_embedding_one_layer_dual_lr_epoch_1.p\",\n",
-    "    \"aws_text_embedding_one_layer_dual_lr_epoch_2.p\",\n",
-    "]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "68imyr2CN0G1",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "68imyr2CN0G1",
-    "outputId": "8b6f7861-1e21-404b-dc84-250e1d628bbb"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "clip_checkpoints/aws_text_embedding_one_layer_dual_lr_initial_state.p\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 23/23 [00:01<00:00, 13.80it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(718, 512) (718, 512)\n",
-      "\n",
-      "clip_checkpoints/aws_text_embedding_one_layer_dual_lr_epoch_1.p\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 23/23 [00:01<00:00, 17.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(718, 512) (718, 512)\n",
-      "\n",
-      "clip_checkpoints/aws_text_embedding_one_layer_dual_lr_epoch_2.p\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 23/23 [00:01<00:00, 17.60it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(718, 512) (718, 512)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "all_image_embeddings = []\n",
-    "all_text_embeddings = []\n",
-    "for checkpoint_path in checkpoint_paths:\n",
-    "    print(checkpoint_path)\n",
-    "    state = torch.load(checkpoint_path, map_location=torch.device('cpu'))\n",
-    "    full_model.load_state_dict(state)\n",
-    "\n",
-    "    full_model.eval()\n",
-    "    image_embs = []\n",
-    "    text_embs = []\n",
-    "    with torch.no_grad():\n",
-    "        for image_inp, text_inp in tqdm.tqdm(val_loader, total=len(val_loader)):\n",
-    "            image_inp = image_inp.to(device)\n",
-    "            text_inp = text_inp.to(device)\n",
-    "            image_embs.append(full_model.clip_model.encode_image(image_inp).cpu().numpy())\n",
-    "            text_embs.append(full_model.clip_model.encode_text(text_inp).cpu().numpy())\n",
-    "    all_image_embeddings.append(np.concatenate(image_embs, axis=0))\n",
-    "    all_text_embeddings.append(np.concatenate(text_embs, axis=0))\n",
-    "    print(all_image_embeddings[-1].shape, all_text_embeddings[-1].shape)\n",
-    "    print(\"\")\n",
-    "    \n",
-    "with open(CHECKPOINT_DIR + \"text_only_image_embeddings.pkl\", \"wb\") as file:\n",
-    "    pickle.dump(all_image_embeddings, file)\n",
-    "with open(CHECKPOINT_DIR + \"text_only_text_embeddings.pkl\", \"wb\") as file:\n",
-    "    pickle.dump(all_text_embeddings, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "8b83f75c-ea2d-4a2b-9906-f47101a6fcb2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.30969194\n",
-      "0.30969194\n",
-      "0.30969194\n",
-      "1.0\n",
-      "0.9999096\n",
-      "0.99978024\n"
-     ]
-    }
-   ],
-   "source": [
-    "for emb_set in all_image_embeddings + all_text_embeddings:\n",
-    "    v1 = all_text_embeddings[0][3]\n",
-    "    v2 = emb_set[3]\n",
-    "    print(np.dot(v1, v2) / (np.linalg.norm(v1) * np.linalg.norm(v2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "91bcc8e3-819d-4a5c-9795-95c0e3806a2c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([49408, 512])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(full_model.clip_model.token_embedding.parameters())[0].size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "79e47f3c-a872-4549-80db-dcd85b7870b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Embeddings are not 2D, skipping alignment\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/pytorch_p37/lib/python3.7/site-packages/umap/umap_.py:919: RuntimeWarning: overflow encountered in true_divide\n",
-      "  result[n_samples > 0] = float(n_epochs) / n_samples[n_samples > 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "embs = emblaze.EmbeddingSet([\n",
-    "    emblaze.Embedding({\n",
-    "        emblaze.Field.POSITION: emb,\n",
-    "        emblaze.Field.COLOR: np.ones(len(emb))\n",
-    "    }, metric='cosine', label=label)\n",
-    "    for emb, label in zip(all_text_embeddings, ['initial', 'epoch 2', 'epoch 3'])\n",
-    "])\n",
-    "embs.compute_neighbors()\n",
-    "\n",
-    "projections = embs.project(method=emblaze.ProjectionTechnique.ALIGNED_UMAP)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b9a563c-d672-4550-a9ba-312b57a1fdce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "b7336c0a-6b34-48e4-95bc-78f2573ed172",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 718/718 [00:06<00:00, 106.96it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def add_alpha_channel(img_arr):\n",
-    "    return np.concatenate([img_arr, np.ones(img_arr.shape[:2] + (1,)) * 255], axis=2)\n",
-    "raw_images = [add_alpha_channel(np.array(Image.open(IMAGES_DIR + image_id + \".jpg\"))) for image_id in tqdm.tqdm(product_ids)]\n",
-    "image_thumbnails = emblaze.ImageThumbnails(raw_images)\n",
-    "text_thumbnails = emblaze.TextThumbnails([item_to_info[id] for id in product_ids])\n",
-    "thumbnails = emblaze.CombinedThumbnails([image_thumbnails, text_thumbnails])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "cb190947-a710-476a-ae65-346879d576ca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c8b1642a8e34a0ea757cac659709362",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Viewer(colorScheme='tableau', data={'data': [{'_format': 'compressed', '_idtype': 'u2', '_length': 718, 'ids':…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "w = emblaze.Viewer(embeddings=projections, thumbnails=thumbnails)\n",
-    "w"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0eda32c3-3691-42c2-b11c-ace2bbc0ccc4",
    "metadata": {},
    "source": [
@@ -851,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "29981c99-e216-4f07-a0ea-cbf962ed9315",
    "metadata": {},
    "outputs": [
@@ -880,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "43a41485-1311-4cca-8315-7aa40fbd3eaf",
    "metadata": {},
    "outputs": [],
@@ -902,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "c514d836-2840-456b-a8c6-3f045e188d16",
    "metadata": {},
    "outputs": [
@@ -910,7 +581,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 718/718 [00:05<00:00, 121.18it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 718/718 [00:05<00:00, 136.92it/s]\n"
      ]
     },
     {
@@ -919,7 +590,7 @@
        "torch.Size([35900, 77])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "67aaf16f-a89c-4a82-9cef-b568ab08c1bb",
    "metadata": {},
    "outputs": [
@@ -966,30 +637,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "3278310c-3fde-4aee-a8d7-26d677f83cf1",
+   "execution_count": 17,
+   "id": "44957929-ba66-42e4-a6b2-a4f3954a7b2e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
     }
    ],
    "source": [
-    "checkpoint_path = CHECKPOINT_DIR + \"aws_image_embedding_one_layer_dual_lr_epoch_2.p\"\n",
-    "state = torch.load(checkpoint_path, map_location=torch.device('cpu'))\n",
-    "full_model.load_state_dict(state)"
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "58f659d1-b8df-4175-8cbc-cc2428ea35fd",
    "metadata": {},
    "outputs": [
@@ -997,7 +664,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1122/1122 [02:52<00:00,  6.49it/s]"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1122/1122 [02:11<00:00,  8.51it/s]"
      ]
     },
     {
@@ -1016,7 +683,7 @@
     }
    ],
    "source": [
-    "full_model.eval()\n",
+    "model.eval()\n",
     "ranking_results = []\n",
     "with torch.no_grad():\n",
     "    for lstm, cnn in tqdm.tqdm(zip(text_ranking_loader, img_ranking_loader), total=len(text_ranking_loader)):\n",
@@ -1024,8 +691,9 @@
     "        cnn_inp1, cnn_inp2, _ = cnn\n",
     "        lstm_inp1, lstm_inp2 = lstm_inp1.to(device), lstm_inp2.to(device)\n",
     "        cnn_inp1, cnn_inp2 = cnn_inp1.to(device), cnn_inp2.to(device)\n",
-    "        full_model.zero_grad()\n",
-    "        output = full_model(lstm_inp1, lstm_inp2, cnn_inp1, cnn_inp2)\n",
+    "        emb_1 = torch.cat((model.encode_image(cnn_inp1), model.encode_text(lstm_inp1)), 1)\n",
+    "        emb_2 = torch.cat((model.encode_image(cnn_inp2), model.encode_text(lstm_inp2)), 1)\n",
+    "        output = torch.sum(emb_1 * emb_2, axis=1) / (torch.linalg.norm(emb_1, 2, 1) * torch.linalg.norm(emb_2, 2, 1))\n",
     "        ranking_results.append(output.cpu().numpy())\n",
     "ranking_results = np.concatenate(ranking_results).reshape(len(premise_products), len(hypothesis_products))\n",
     "print(ranking_results.shape)"
@@ -1033,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "130811f3-c839-4bad-b715-b92627ad8287",
    "metadata": {},
    "outputs": [],
@@ -1078,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "752e0478-0a4b-4cde-8c8c-2785152f1786",
    "metadata": {},
    "outputs": [
@@ -1086,11 +754,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NDCG: 0.0071 (95% CI -0.071-0.086)\n",
-      "Score: 0.0043 (95% CI -0.033-0.042)\n",
-      "Precision: 0.0100 (95% CI -0.061-0.081)\n",
-      "Recall: 0.0041 (95% CI -0.027-0.036)\n",
-      "FValue: 0.0057 (95% CI -0.037-0.049)\n"
+      "NDCG: 0.2389 (95% CI 0.133-0.345)\n",
+      "Score: 0.1212 (95% CI 0.027-0.216)\n",
+      "Precision: 0.1240 (95% CI 0.016-0.232)\n",
+      "Recall: 0.0760 (95% CI -0.008-0.160)\n",
+      "FValue: 0.0886 (95% CI 0.014-0.164)\n"
      ]
     }
    ],
@@ -1117,7 +785,7 @@
     "print(\"Recall: {:.4f} (95% CI {:.3f}-{:.3f})\".format(recall.mean(), recall.mean() - 1.96 * recall.std(), recall.mean() + 1.96 * recall.std()))\n",
     "print(\"FValue: {:.4f} (95% CI {:.3f}-{:.3f})\".format(fvalue.mean(), fvalue.mean() - 1.96 * fvalue.std(), fvalue.mean() + 1.96 * fvalue.std()))\n",
     "\n",
-    "with open(os.path.splitext(checkpoint_path)[0] + \"_rankings_{}_queries.pkl\".format(len(premise_products)), \"wb\") as file:\n",
+    "with open(\"untuned_rankings_{}_queries.pkl\".format(len(premise_products)), \"wb\") as file:\n",
     "    pickle.dump({\n",
     "        \"ndcg\": ndcg,\n",
     "        \"score\": score,\n",
